fix: jumpiness at 600px

--- a/www/_includes/css/main.css
+++ b/www/_includes/css/main.css
@@ -206,7 +206,7 @@ sphere-shadow::part(hud-value) {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 599px) {
   :root {
     --card-padding: 0.5rem 0.75rem;
   }
